# RL_4_optimalTrading-

./: .gitignore  CLAUDE.md  README.md  Random_walk_regression_torch.ipynb  main.py  plan.md  pyproject.toml  rl_hmm.py  simplelogger.py
.report/: test.ipynb
OU/: simulate_OU.py
RL_env/: episode_analysis.csv  policy_viz.py  test_single_episode.py  trading_env.py
SimpleLogger/MajeureData/checkpoints/: epoch=11-step=132.ckpt  epoch=119-step=1560.ckpt  epoch=12-step=143.ckpt  epoch=128-step=1677.ckpt  epoch=15-step=176.ckpt  epoch=18-step=209.ckpt  epoch=19-step=220.ckpt  epoch=19-step=280.ckpt  epoch=28-step=377.ckpt  epoch=29-step=16380.ckpt  epoch=29-step=390.ckpt  epoch=34-step=455.ckpt  epoch=36-step=407.ckpt  epoch=38-step=507-v1.ckpt  epoch=38-step=507-v2.ckpt  epoch=38-step=507.ckpt  epoch=39-step=520-v1.ckpt  epoch=39-step=520-v2.ckpt  epoch=39-step=520.ckpt  epoch=44-step=495.ckpt  epoch=73-step=962.ckpt
lib/: constants.py  win_adam.py
models/: actor.py  critic.py  eval_GRU.py  eval_GRU_aggregate.py  gru.py  gru_utils.py  train_GRU.py
models/checkpoints/: best_gru_model.pth  best_gru_model_prob.pth  best_gru_model_reg.pth  ddpg_prob_case1_best.pth  ddpg_reg_case1_best.pth
models/checkpoints_test/: best_gru_model.pth
replay_buffer/: compilation.md  plot_data.py  replay.py
replay_buffer/data/theta_MK/: episode_0.csv  episode_1.csv  episode_10.csv  episode_100.csv  episode_1000.csv  episode_101.csv  episode_102.csv  episode_103.csv  episode_104.csv  episode_105.csv  episode_106.csv  episode_107.csv  episode_108.csv  episode_109.csv  episode_11.csv  (+985 more)
(+1500 files in other folders)
