[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "shimmy>=2.0.0",
    "torch>=2.10.0",
]
